--- a/view/CSS/style.css
+++ b/view/CSS/style.css
@@ -4,16 +4,22 @@
 
 h1
 {
-    color:red;
+    color:gray;
     text-align: center;
     text-decoration:underline;
 }
+
+body
+{
+    padding: 1em;
+}
+
 
 h5
 {
     color: red;
     text-decoration: underline;
-    font-size: large;
+    font-size:20;
 }
 
 .boutton_millieu
@@ -50,4 +56,83 @@ h6
 {
     color: yellowgreen;
     text-align: center;
+    font-size: 15;
 }
+
+.btn-orange-moon {
+    background: #fc4a1a;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #f7b733, #fc4a1a);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #f7b733, #fc4a1a); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    color: #fff;
+    border: 3px solid #eee;
+}
+
+.btn-circle.btn-xl {
+    width: 70px;
+    height: 70px;
+    padding: 10px 16px;
+    font-size: 24px;
+    line-height: 1.33;
+    border-radius: 35px;
+  }
+
+  .
+
+  /* Make it looks good on CodePen */
+html {
+    background-color: #cef;
+  }
+  html, body, .sonar-wrapper {
+    height: 100%;
+  }
+  
+  /* Prevent scrollbars to appear when waves go out of bound */
+  .sonar-wrapper {
+    position: relative;
+    z-index: 0;
+    overflow: hidden;
+    padding: 8rem 0;
+  }
+  
+  /* The circle */
+  .sonar-emitter {
+    position: relative;
+    margin: 0 auto;
+    width: 275px;
+    height: 275px;
+    border-radius: 9999px;
+    background-color: HSL(45,100%,50%);
+  }
+  
+  /* the 'wave', same shape and size as its parent */
+  .sonar-wave {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 9999px;
+    background-color: HSL(45,100%,50%);
+    opacity: 0;
+    z-index: -1;
+    pointer-events: none;
+  }
+  
+  /*
+    Animate!
+    NOTE: add browser prefixes where needed.
+  */
+  .sonar-wave {
+    animation: sonarWave 2s linear infinite;
+  }
+  
+  @keyframes sonarWave {
+    from {
+      opacity: 0.4;
+    }
+    to {
+      transform: scale(3);
+      opacity: 0;
+    }
+  }
+  
