--- a/view/CSS/radio.css
+++ b/view/CSS/radio.css
@@ -1,73 +1,75 @@
-.radiobtn   { position   : relative ;
-              display    : block    ; }
+.radiobtn   { 
+    position            : relative              ;
+    display             : block                 ;
+}
 
 .radiobtn .extended {
-    display: block;
-    width: 100%;
-    box-sizing: border-box;
-    overflow: hidden;
-    background: #fe8fa3;
-    margin-bottom: 5px;
-    margin-top: -7.5px;
-    border: 2px solid #fe4365;
-    border-top: 0;
-    border-radius: 0 0 5px 5px;
-    max-height: 0;
-    padding: 0;
-    opacity: 0;
-    -webkit-transform: scaleY(0);
-    transform: scaleY(0);
-    -webkit-transform-origin: 0 0;
-    transform-origin: 0 0;
-    transition: 0.3s -webkit-transform cubic-bezier(0.075, 0.82, 0.165, 1);
-    transition: 0.3s transform cubic-bezier(0.075, 0.82, 0.165, 1);
-    transition: 0.3s transform cubic-bezier(0.075, 0.82, 0.165, 1), 0.3s -webkit-transform cubic-bezier(0.075, 0.82, 0.165, 1);
+    display             : block                 ;
+    width               : 100%                  ;
+    box-sizing          : border-box            ;
+    overflow            : hidden                ;
+    background          : #fe8fa3               ;
+    margin-bottom       : 5px                   ;
+    margin-top          : -7.5px                ;
+    border              : 2px solid #fe4365     ;
+    border-top          : 0                     ;
+    border-radius       : 0 0 5px 5px           ;
+    max-height          : 0                     ;
+    padding             : 0                     ;
+    opacity             : 0                     ;
+    -webkit-transform   : scaleY(0)             ;
+    transform           : scaleY(0)             ;
+    -webkit-transform-origin: 0 0               ;
+    transform-origin    : 0 0                   ;
+    transition          : 0.3s -webkit-transform cubic-bezier(0.075, 0.82, 0.165, 1)                                                        ;
+    transition          : 0.3s transform cubic-bezier(0.075, 0.82, 0.165, 1)                                                                ;
+    transition          : 0.3s transform cubic-bezier(0.075, 0.82, 0.165, 1), 0.3s -webkit-transform cubic-bezier(0.075, 0.82, 0.165, 1)    ;
 }
 
 .radiobtn .extended button {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    border: 2px solid #fe4365;
-    background: #ffdbe2;
-    font-size: 13px;
-    text-align: center;
-    display: block;
-    width: 100%;
-    padding: 7px;
-    margin-top: 5px;
-    border-radius: 30px;
-    font-weight: 700;
-    outline: 0;
+    -webkit-appearance  : none                ;
+    -moz-appearance     : none                ;
+    appearance          : none                ;
+    border              : 2px solid #fe4365   ;
+    background          : #ffdbe2             ;
+    font-size           : 13px                ;
+    text-align          : center              ;
+    display             : block               ;
+    width               : 100%                ;
+    padding             : 7px                 ;
+    margin-top          : 5px                 ;
+    border-radius       : 30px                ;
+    font-weight         : 700                 ;
+    outline             : 0                   ;
 }
 
 .radiobtn .extended textarea {
-    display: block;
-    width: 100%;
-    min-height: 100px;
-    box-sizing: border-box;
-    padding: 10px;
-    border-radius: 5px;
-    border: 2px solid #ffa8b8;
+    display             : block               ;
+    width               : 100%                ;
+    min-height          : 100px               ;
+    box-sizing          : border-box          ;
+    padding             : 10px                ;
+    border-radius       : 5px                 ;
+    border              : 2px solid #ffa8b8   ;
 }
 
 .radiobtn .extended textarea:focus {
-    border-color: #fe4365;
-    outline: 0;
+    border-color        : #fe4365             ;
+    outline             : 0                   ;
 }
 
 .radiobtn label {
-    display: block;
-    background: #ffdbe2;
-    color: #444;
-    border-radius: 5px;
-    padding: 10px 20px;
-    border: 2px solid #ffa8b8;
-    margin-bottom: 5px;
-    cursor: pointer;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
+    display             : block               ;
+    background          : #ffdbe2             ;
+    color               : #444                ;
+    border-radius       : 5px                 ;
+    padding             : 10px 20px           ;
+    border              : 2px solid #ffa8b8   ;
+    margin-bottom       : 5px                 ;
+    cursor              : pointer             ;
+    -webkit-appearance  : none                ;
+    -moz-appearance     : none                ;
+    appearance          : none                ;
 }
 
 /*.radiobtn label:after,
